--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/styled-components": "^5.1.34",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "moment-timezone": "^0.5.45",
@@ -19,7 +20,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
