--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@types/styled-components": "^5.1.34",
+    "@videojs/http-streaming": "^3.13.2",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "styled-components": "^6.1.12"
